--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
     </header>
 
     <main>
-      <section class="banner">
+      <section class="banner hidden">
         <div class="container">
           <h1 class="banner-title">Effective Solutions for Your Business</h1>
           <button class="banner-button" type="button">Order Service</button>
         </div>
       </section>
 
-      <section class="feature">
+      <section class="feature hidden">
         <div class="container">
           <h2 class="visually-hidden">Benefits</h2>
           <ul class="feature-list">
@@ -125,7 +125,7 @@
         </div>
       </section>
 
-      <section class="team">
+      <section class="team hidden">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
 
@@ -294,7 +294,7 @@
         </div>
       </section>
 
-      <section class="portfolio">
+      <section class="portfolio hidden">
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
 
@@ -412,7 +412,7 @@
       </section>
     </main>
 
-    <footer class="page-footer">
+    <footer class="page-footer hidden">
       <div class="container footer">
         <div class="footer-wrap">
           <a class="logo footer-logo" href="./index.html"
@@ -478,7 +478,7 @@
       </div>
     </footer>
 
-    <div class="modal-container">
+    <div class="modal-container hidden">
       <div class="modal">
         <button class="modal-button" type="button">
           <svg class="modal-icon" width="8" height="8">
