--- a/index.html
+++ b/index.html
@@ -58,6 +58,16 @@
             </li>
           </ul>
         </address>
+
+        <button class="burger" type="button">
+          <svg class="burger-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-burger"></use>
+          </svg>
+        </button>
+
+        <div class="mob-menu">
+          <div class="container mob-menu-container"></div>
+        </div>
       </div>
     </header>
 
