--- a/index.html
+++ b/index.html
@@ -65,8 +65,17 @@
           </svg>
         </button>
 
-        <div class="mob-menu">
-          <div class="container mob-menu-container"></div>
+        <div class="mob-menu is-open">
+          <div class="container mob-menu-container">
+            <button class="mob-button-close">
+              <svg class="mob-button-icon" width="8" height="8">
+                <use href="./images/icons.svg#icon-close"></use>
+              </svg>
+            </button>
+            <nav class="mob-menu-nav">Navigation</nav>
+            <address>Address</address>
+            <div>Social link</div>
+          </div>
         </div>
       </div>
     </header>
