--- a/index.html
+++ b/index.html
@@ -72,9 +72,89 @@
                 <use href="./images/icons.svg#icon-close"></use>
               </svg>
             </button>
-            <nav class="mob-menu-nav">Navigation</nav>
-            <address>Address</address>
-            <div>Social link</div>
+
+            <nav class="mob-menu-nav">
+              <ul class="mob-nav-list">
+                <li class="mob-nav-item">
+                  <a
+                    class="mob-nav-link current"
+                    href="./index.html"
+                    target="_blank"
+                    >Studio</a
+                  >
+                </li>
+                <li class="mob-nav-item">
+                  <a class="mob-nav-link" href="" target="_blank">Portfolio</a>
+                </li>
+                <li class="mob-nav-item">
+                  <a class="mob-nav-link" href="" target="_blank">Contacts</a>
+                </li>
+              </ul>
+            </nav>
+
+            <address class="mob-contacts">
+              <ul class="mob-contacts-list">
+                <li class="mob-contacts-item">
+                  <a class="mob-link tel" href="tel:+110001111111"
+                    >+11 (000) 111-11-11</a
+                  >
+                </li>
+                <li class="mob-contacts-item">
+                  <a class="mob-link email" href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a
+                  >
+                </li>
+              </ul>
+            </address>
+
+            <div class="mob-social">
+              <ul class="mob-social-list">
+                <li class="mob-social-item">
+                  <a
+                    class="mob-social-link"
+                    href="./index.html"
+                    target="_blank"
+                  >
+                    <svg class="social-icon" width="24" height="24">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="mob-social-item">
+                  <a
+                    class="mob-social-link"
+                    href="./index.html"
+                    target="_blank"
+                  >
+                    <svg class="social-icon" width="24" height="24">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="mob-social-item">
+                  <a
+                    class="mob-social-link"
+                    href="./index.html"
+                    target="_blank"
+                  >
+                    <svg class="social-icon" width="24" height="24">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="mob-social-item">
+                  <a
+                    class="mob-social-link"
+                    href="./index.html"
+                    target="_blank"
+                  >
+                    <svg class="social-icon" width="24" height="24">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
