--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           </svg>
         </button>
 
-        <div class="mob-menu is-open">
+        <div class="mob-menu">
           <div class="container mob-menu-container">
             <button class="mob-button-close">
               <svg class="mob-button-icon" width="8" height="8">
@@ -161,7 +161,7 @@
     </header>
 
     <main>
-      <section class="banner hidden">
+      <section class="banner">
         <div class="container">
           <h1 class="banner-title">Effective Solutions for Your Business</h1>
           <button class="banner-button" type="button">Order Service</button>
