--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         </div>
       </section>
 
-      <section class="feature hidden">
+      <section class="feature">
         <div class="container">
           <h2 class="visually-hidden">Benefits</h2>
           <ul class="feature-list">
