--- a/index.html
+++ b/index.html
@@ -224,14 +224,18 @@
         </div>
       </section>
 
-      <section class="team hidden">
+      <section class="team">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
 
           <ul class="team-list">
             <li class="team-item">
               <img
-                src="./images/MarkGuerrero.jpg"
+                srcset="
+                  ./images/mob-team-1.jpg    1x,
+                  ./images/mob-team-1@2x.jpg 2x
+                "
+                src="./images/mob-team-1.jpg"
                 alt="Mark Guerrero"
                 width="264"
               />
@@ -271,7 +275,15 @@
               </div>
             </li>
             <li class="team-item">
-              <img src="./images/TomFord.jpg" alt="Tom Ford" width="264" />
+              <img
+                srcset="
+                  ./images/mob-team-2.jpg    1x,
+                  ./images/mob-team-2@2x.jpg 2x
+                "
+                src="./images/mob-team-2.jpg"
+                alt="Tom Ford"
+                width="264"
+              />
               <div class="team-box">
                 <h3 class="team-list-title">Tom Ford</h3>
                 <p class="team-list-text">Frontend Developer</p>
@@ -309,7 +321,11 @@
             </li>
             <li class="team-item">
               <img
-                src="./images/CamilaGarcia.jpg"
+                srcset="
+                  ./images/mob-team-3.jpg    1x,
+                  ./images/mob-team-3@2x.jpg 2x
+                "
+                src="./images/mob-team-3.jpg"
                 alt="Camila Garcia"
                 width="264"
               />
@@ -350,7 +366,11 @@
             </li>
             <li class="team-item">
               <img
-                src="./images/DanielWilson.jpg"
+                srcset="
+                  ./images/mob-team-4.jpg    1x,
+                  ./images/mob-team-4@2x.jpg 2x
+                "
+                src="./images/mob-team-4.jpg"
                 alt="Daniel Wilson"
                 width="264"
               />
