--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
         </div>
       </section>
 
-      <section class="portfolio hidden">
+      <section class="portfolio">
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
 
@@ -421,9 +421,9 @@
             <li class="portfolio-item">
               <div class="portfolio-image">
                 <img
-                  src="./images/Portfolio1.jpg"
+                  src="./images/mob-s3-1.jpg"
                   alt="Banking App"
-                  width="360"
+                  width="288"
                 />
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -439,9 +439,9 @@
             <li class="portfolio-item">
               <div class="portfolio-image">
                 <img
-                  src="./images/Portfolio2.jpg"
+                  src="./images/mob-s3-2.jpg"
                   alt="Cashless Payment"
-                  width="360"
+                  width="288"
                 />
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -457,9 +457,9 @@
             <li class="portfolio-item">
               <div class="portfolio-image">
                 <img
-                  src="./images/Portfolio3.jpg"
+                  src="./images/mob-s3-3.jpg"
                   alt="Meditaion App"
-                  width="360"
+                  width="288"
                 />
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -475,9 +475,9 @@
             <li class="portfolio-item">
               <div class="portfolio-image">
                 <img
-                  src="./images/Portfolio4.jpg"
+                  src="./images/mob-s3-4.jpg"
                   alt="Taxi Service"
-                  width="360"
+                  width="288"
                 />
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -493,9 +493,9 @@
             <li class="portfolio-item">
               <div class="portfolio-image">
                 <img
-                  src="./images/Portfolio5.jpg"
+                  src="./images/mob-s3-5.jpg"
                   alt="Screen Illustrations"
-                  width="360"
+                  width="288"
                 />
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -511,9 +511,9 @@
             <li class="portfolio-item">
               <div class="portfolio-image">
                 <img
-                  src="./images/Portfolio6.jpg"
+                  src="./images/mob-s3-6.jpg"
                   alt="Online Courses"
-                  width="360"
+                  width="288"
                 />
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
