--- a/index.html
+++ b/index.html
@@ -232,10 +232,10 @@
             <li class="team-item">
               <img
                 srcset="
-                  ./images/mob-team-1.jpg    1x,
-                  ./images/mob-team-1@2x.jpg 2x
+                  ./images/team/mob-team-1.jpg    1x,
+                  ./images/team/mob-team-1@2x.jpg 2x
                 "
-                src="./images/mob-team-1.jpg"
+                src="./images/team/mob-team-1.jpg"
                 alt="Mark Guerrero"
                 width="264"
               />
@@ -277,10 +277,10 @@
             <li class="team-item">
               <img
                 srcset="
-                  ./images/mob-team-2.jpg    1x,
-                  ./images/mob-team-2@2x.jpg 2x
+                  ./images/team/mob-team-2.jpg    1x,
+                  ./images/team/mob-team-2@2x.jpg 2x
                 "
-                src="./images/mob-team-2.jpg"
+                src="./images/team/mob-team-2.jpg"
                 alt="Tom Ford"
                 width="264"
               />
@@ -322,10 +322,10 @@
             <li class="team-item">
               <img
                 srcset="
-                  ./images/mob-team-3.jpg    1x,
-                  ./images/mob-team-3@2x.jpg 2x
+                  ./images/team/mob-team-3.jpg    1x,
+                  ./images/team/mob-team-3@2x.jpg 2x
                 "
-                src="./images/mob-team-3.jpg"
+                src="./images/team/mob-team-3.jpg"
                 alt="Camila Garcia"
                 width="264"
               />
@@ -367,10 +367,10 @@
             <li class="team-item">
               <img
                 srcset="
-                  ./images/mob-team-4.jpg    1x,
-                  ./images/mob-team-4@2x.jpg 2x
+                  ./images/team/mob-team-4.jpg    1x,
+                  ./images/team/mob-team-4@2x.jpg 2x
                 "
-                src="./images/mob-team-4.jpg"
+                src="./images/team/mob-team-4.jpg"
                 alt="Daniel Wilson"
                 width="264"
               />
@@ -420,11 +420,34 @@
           <ul class="portfolio-list">
             <li class="portfolio-item">
               <div class="portfolio-image">
-                <img
-                  src="./images/mob-s3-1.jpg"
-                  alt="Banking App"
-                  width="288"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/portfolio/s3-desk/desk-s3-1.jpg    1x,
+                      ./images/portfolio/s3-desk/desk-s3-1@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/portfolio/s3-tab/tab-s3-1.jpg    1x,
+                      ./images/portfolio/s3-tab/tab-s3-1@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ./images/portfolio/s3-mob/mob-s3-1.jpg    1x,
+                      ./images/portfolio/s3-mob/mob-s3-1@2x.jpg 2x
+                    "
+                  />
+                  <img
+                    src="./images/portfolio/s3-desk/desk-s3-1.jpg"
+                    alt="Banking App"
+                  />
+                </picture>
+
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -438,11 +461,34 @@
             </li>
             <li class="portfolio-item">
               <div class="portfolio-image">
-                <img
-                  src="./images/mob-s3-2.jpg"
-                  alt="Cashless Payment"
-                  width="288"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/portfolio/s3-desk/desk-s3-2.jpg    1x,
+                      ./images/portfolio/s3-desk/desk-s3-2@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/portfolio/s3-tab/tab-s3-2.jpg    1x,
+                      ./images/portfolio/s3-tab/tab-s3-2@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ./images/portfolio/s3-mob/mob-s3-2.jpg    1x,
+                      ./images/portfolio/s3-mob/mob-s3-2@2x.jpg 2x
+                    "
+                  />
+                  <img
+                    src="./images/portfolio/s3-desk/desk-s3-2.jpg"
+                    alt="Cashless Payment"
+                  />
+                </picture>
+
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -456,11 +502,34 @@
             </li>
             <li class="portfolio-item">
               <div class="portfolio-image">
-                <img
-                  src="./images/mob-s3-3.jpg"
-                  alt="Meditaion App"
-                  width="288"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/portfolio/s3-desk/desk-s3-3.jpg    1x,
+                      ./images/portfolio/s3-desk/desk-s3-3@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/portfolio/s3-tab/tab-s3-3.jpg    1x,
+                      ./images/portfolio/s3-tab/tab-s3-3@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ./images/portfolio/s3-mob/mob-s3-3.jpg    1x,
+                      ./images/portfolio/s3-mob/mob-s3-3@2x.jpg 2x
+                    "
+                  />
+                  <img
+                    src="./images/portfolio/s3-desk/desk-s3-3.jpg"
+                    alt="Meditaion App"
+                  />
+                </picture>
+
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -474,11 +543,34 @@
             </li>
             <li class="portfolio-item">
               <div class="portfolio-image">
-                <img
-                  src="./images/mob-s3-4.jpg"
-                  alt="Taxi Service"
-                  width="288"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/portfolio/s3-desk/desk-s3-4.jpg    1x,
+                      ./images/portfolio/s3-desk/desk-s3-4@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/portfolio/s3-tab/tab-s3-4.jpg    1x,
+                      ./images/portfolio/s3-tab/tab-s3-4@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ./images/portfolio/s3-mob/mob-s3-4.jpg    1x,
+                      ./images/portfolio/s3-mob/mob-s3-4@2x.jpg 2x
+                    "
+                  />
+                  <img
+                    src="./images/portfolio/s3-desk/desk-s3-4.jpg"
+                    alt="Taxi Service"
+                  />
+                </picture>
+
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -492,11 +584,34 @@
             </li>
             <li class="portfolio-item">
               <div class="portfolio-image">
-                <img
-                  src="./images/mob-s3-5.jpg"
-                  alt="Screen Illustrations"
-                  width="288"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/portfolio/s3-desk/desk-s3-5.jpg    1x,
+                      ./images/portfolio/s3-desk/desk-s3-5@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/portfolio/s3-tab/tab-s3-5.jpg    1x,
+                      ./images/portfolio/s3-tab/tab-s3-5@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ./images/portfolio/s3-mob/mob-s3-5.jpg    1x,
+                      ./images/portfolio/s3-mob/mob-s3-5@2x.jpg 2x
+                    "
+                  />
+                  <img
+                    src="./images/portfolio/s3-desk/desk-s3-5.jpg"
+                    alt="Screen Illustrations"
+                  />
+                </picture>
+
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -510,11 +625,34 @@
             </li>
             <li class="portfolio-item">
               <div class="portfolio-image">
-                <img
-                  src="./images/mob-s3-6.jpg"
-                  alt="Online Courses"
-                  width="288"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/portfolio/s3-desk/desk-s3-6.jpg    1x,
+                      ./images/portfolio/s3-desk/desk-s3-6@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/portfolio/s3-tab/tab-s3-6.jpg    1x,
+                      ./images/portfolio/s3-tab/tab-s3-6@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ./images/portfolio/s3-mob/mob-s3-6.jpg    1x,
+                      ./images/portfolio/s3-mob/mob-s3-6@2x.jpg 2x
+                    "
+                  />
+                  <img
+                    src="./images/portfolio/s3-desk/desk-s3-6.jpg"
+                    alt="Online Courses"
+                  />
+                </picture>
+
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
