--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@
       </section>
     </main>
 
-    <footer class="page-footer hidden">
+    <footer class="page-footer">
       <div class="container footer">
         <div class="footer-wrap">
           <a class="logo footer-logo" href="./index.html"
